[gd_scene load_steps=13 format=2]

[ext_resource path="res://scenes/NPCs/bacallMatronly.png" type="Texture" id=1]
[ext_resource path="res://scenes/Quests/NPC_QuestGiver.gd" type="Script" id=2]
[ext_resource path="res://scenes/_common/GUI/sfx/Box_lock_open.wav" type="AudioStream" id=3]
[ext_resource path="res://scenes/Quests/quest_icon_question.png" type="Texture" id=4]
[ext_resource path="res://scenes/_common/GUI/fonts/SpecialElite18t.tres" type="DynamicFont" id=5]
[ext_resource path="res://scenes/Items/collectables/2D/Paper2DPickup.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/_common/GUI/fonts/SpecialElite16Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/Items/collectables/2D/PaperClue2DPickup.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Items/collectables/2D/TalkClue2DPickup.tscn" type="PackedScene" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 32.7567

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 144.25, 134.5 )

[sub_resource type="CanvasItemMaterial" id=3]
light_mode = 1

[node name="LaurenValiantMotherOfVictim" type="KinematicBody2D"]
position = Vector2( 6, 0 )
script = ExtResource( 2 )
dialog_unmet_requirements = PoolStringArray( "Listen Andrew,", "I\'ll help you if you can get Romano off my back." )
dialog_fulfilled_requirements = PoolStringArray( "He waived the overage fees\?", "Thank you so much!" )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.49012e-08 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.813172, -0.119232 )
scale = Vector2( 0.0937591, 0.0937591 )
texture = ExtResource( 1 )
offset = Vector2( -2.88073, -15.1868 )

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="InteractionArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
position = Vector2( -2, 9 )
shape = SubResource( 2 )

[node name="QuestTargetObjects" type="ResourcePreloader" parent="."]

[node name="ThoughtBubble" type="Sprite" parent="."]
position = Vector2( -52, -63 )
texture = ExtResource( 4 )

[node name="DialogLabel" type="Label" parent="."]
material = SubResource( 3 )
margin_left = 6.0
margin_top = -135.0
margin_right = 98.0
margin_bottom = -43.0
rect_min_size = Vector2( 150, 92 )
custom_colors/font_color = Color( 0.831373, 0.831373, 0.831373, 1 )
custom_fonts/font = ExtResource( 5 )
autowrap = true

[node name="QuestDiscoveredNoise" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="PotentialRequiredItems" type="Node2D" parent="."]
visible = false

[node name="Evidence" parent="PotentialRequiredItems" instance=ExtResource( 6 )]
visible = false
item_details = {
"is_unique": true,
"item_name": "Eyewitness Account of Mob Boss paying off the Mayor",
"notes_for_journal": "A transcript from an interview with an eyewitness. It describes the Mob Boss in cahoots with the corrupt mayor.",
"path_to_icon": "res://scenes/_common/GUI/icons/paper-h.png",
"path_to_popup_display_image": "res://scenes/Items/collectables/Paper_1.png",
"path_to_scene_for_PlayerController_Items": ""
}

[node name="PotentialRewards" type="Node2D" parent="."]
visible = false

[node name="TalkClue" parent="PotentialRewards" instance=ExtResource( 9 )]
visible = false
scale = Vector2( 0.550716, 0.550716 )
item_details = {
"display_immediately": true,
"is_unique": false,
"item_name": "Lead - Talk to Will, the snitch.",
"notes_for_journal": "Lauren Valiant seems to think Will the Snitch might have some compelling information about the Mayor, which might be of interest to Fusili Romano, which might get him off her case. Of course, she's too timid to pursue the lead, but that's what I do.",
"path_to_icon": "res://scenes/_common/GUI/icons/TalkClue-n.png",
"path_to_popup_display_image": "res://scenes/_common/GUI/icons/TalkClue-n.png",
"path_to_scene_for_PlayerController_Items": ""
}

[node name="PhotoAlbum" parent="PotentialRewards" instance=ExtResource( 8 )]
visible = false
scale = Vector2( 0.551319, 0.551319 )
item_details = {
"display_immediately": true,
"is_unique": false,
"item_name": "Lauren Valiant's Photo Album",
"notes_for_journal": "I almost couldn't bear to sit through her long family photos presentation. My heart nearly stopped when she showed me the photograph of her daughter. The woman in the photograph was definitely not the woman, Veronica, who turned up at my office earlier. Why was the Dame lying about her identity?",
"path_to_icon": "res://scenes/_common/GUI/icons/PaperClue-n.png",
"path_to_popup_display_image": "res://scenes/_common/GUI/icons/PaperClue-n.png",
"path_to_scene_for_PlayerController_Items": ""
}

[node name="EyewitnessAccountTwoGunshots" parent="PotentialRewards" instance=ExtResource( 6 )]
visible = false
item_details = {
"display_immediately": true,
"is_unique": true,
"item_name": "Eyewitness Account of Shooting",
"notes_for_journal": "Lauren Valiant claims to have heard 2 shots that evening, a short time before the police arrived. If that's true, what accounts for the second shot?",
"path_to_icon": "res://scenes/_common/GUI/icons/paper-h.png",
"path_to_popup_display_image": "res://scenes/Items/collectables/Paper_1.png",
"path_to_scene_for_PlayerController_Items": ""
}

[node name="InteractInstruction" type="Label" parent="."]
visible = false
margin_left = 46.0
margin_top = -101.0
margin_right = 140.0
margin_bottom = -24.0
custom_fonts/font = ExtResource( 7 )
text = "[F]"

[connection signal="body_entered" from="InteractionArea" to="." method="_on_InteractionArea_body_entered"]
[connection signal="body_exited" from="InteractionArea" to="." method="_on_InteractionArea_body_exited"]
